--- a/_config.yaml
+++ b/_config.yaml
@@ -1,3 +1,5 @@
-theme: jekyll-theme-tactile
+remote_theme: pages-themes/tactile@v0.2.0
 title: Julius Vidal's homepage
 description: Bookmark this to keep an eye on my project updates!
+plugins:
+- jekyll-remote-theme
