--- a/_config.yaml
+++ b/_config.yaml
@@ -1,4 +1,4 @@
-remote_theme: pages-themes/tactile@v0.2.0
+remote_theme: ages-themes/slate@v0.2.0
 title: Julius Vidal's homepage
 description: Bookmark this to keep an eye on my project updates!
 plugins:
