--- a/_config.yaml
+++ b/_config.yaml
@@ -1,4 +1,4 @@
-remote_theme: "jekyll/minima@1e8a445"
+remote_theme: "no-style-please"
 title: Julius Vidal's homepage
 description: Bookmark this to keep an eye on my project updates!
 plugins:
